--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-	"name": "code-arrangement",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"watch": "sass --watch scss:css"
-	},
-	"author": "",
-	"license": "ISC",
-	"dependencies": {
-		"sass": "^1.62.0"
-	},
-	"devDependencies": {
-		"eslint": "^8.38.0"
-	}
+    "name": "code-arrangement",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "sass scss:css",
+        "watch": "sass --watch scss:css",
+        "start": "npm run build && live-server"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bootstrap": "^5.2.3"
+    },
+    "devDependencies": {
+        "eslint": "^8.38.0",
+        "live-server": "^1.2.2",
+        "sass": "^1.62.0"
+    }
 }
